# Color-Detector-OAK

./: entry.sh  setup.cfg
src/: gantry.py  main.py
src/res/: main.kv
test/: test_dummy.py
