# NOTE: update the `[project]` section with your app details
[metadata]
name = OAK_color
version = 0.0.1
author = Nathan Jones
author_email = nathanij@byu.edu
url = https://github.com/nathan45654/Color-Detector-OAK
download_url = https://github.com/nathan45654/Color-Detector-OAK
keywords = robotics, open-source
license_files = LICENSE
description = color detection with OAK
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

# NOTE: update the the requirements for your app
[options]
python_requires = >=3.6
setup_requires =
    wheel
install_requires =
    wheel
    kivy
    farm_ng_amiga
    opencv-python
    numpy
    PyTurboJPEG
tests_require =
    pytest

# NOTE: do not touch this path unless you know what you are doing
package_dir =
    = libs

[options.extras_require]
dev =
    pytest
    mypy
    pre-commit>=2.0

[flake8]
max-line-length = 120

[mypy]
files = libs/, src/
pretty = True
ignore_missing_imports = True
